# TransportationEngineers

./: NOTICE  README.md  compose.yaml  compose_ngrok.yaml  keycloack_realm.json  keycloak_realm.json  keycloak_realm_ngrok.json  main.py  nginx.conf  nginx_local.conf  nginx_ngrok.conf
DebugConsole/: .gitignore  pyproject.toml  start.sh  start_without_poetry.sh
DebugConsole/src/: cities.py  config.py  debug_data.py  engineers.py  main.py  store_items.py  stores.py  tickets.py  train_stores.py  users.py  utils.py
DebugConsole/src/auth/: keys_utility.py  service.py
DebugConsole/src/data/: attractions.json  hotels.json  items.json
Docs/: pyproject.toml
Docs/RU/: .gitignore  Demo.md  Doc.docx  Doc.md  README.md  Reference.docx
Docs/RU/scripts/: build.sh  build.sh~  filter.py  ref.docx
FaceServer/: .gitignore  Dockerfile  pyproject.toml
FaceServer/app/: config.py  db.py  face_model.py  main.py  routers.py  schemes.py  service.py
Frontend/: .gitignore  Dockerfile  index.html  input.json  output.json  package-lock.json  package.json  pyproject.toml  tets.py  vite.config.ts
Frontend/app/: config.py  dependencies.py  exceptions.py  main.py  router.py  service.py  static.py
Frontend/app/__pycache__/: config.cpython-312.pyc.2959849426784
Frontend/app/api/: router.py  schemes.py
Frontend/app/login/: router.py  schemes.py  service.py
Frontend/app/static/: auth.js  config.js  profile.js  style.css
Frontend/app/templates/: bio.html  face_login.html~  index.html  login.html  profile.html  profile.html~  qr_login.html  ready-ticket.html  sample.html  template.html  template.html~  ticket.html
Frontend/nginx/: react-nginx.conf
Frontend/src/: App.css  App.tsx  index.css  main.tsx
Frontend/src/components/: CircularProgressWithStyle.tsx  Footer.tsx  Header.tsx  Tickets.tsx
Frontend/src/components/pages/: BiometricsForm.tsx  Index.tsx  Login.tsx  Profile.tsx  TicketForm.tsx  index.tsx  profile.tsx
Robot/: .gitignore  pyproject.toml  start.sh  start_without_poetry.sh  ui_builder.sh
Robot/design/ui/auth/: auth.qrc  auth.ui
Robot/design/ui/store/catalog/: catalog.qrc  catalog.ui  item.ui
Robot/design/ui/store/category_selection/: category_select.qrc  category_select.ui
Robot/design/ui/store/item/: item.qrc  item.ui
Robot/design/ui/ticket/checking/: result.ui  result_f.qrc  result_f.ui  result_s.qrc  result_s.ui  ticket.qrc  ticket.ui  ticket_rc.py  ticket_ui.py
Robot/design/ui/user/: main_menu.ui
Robot/design/ui/user/destination_info/: destinations_info_list.ui
Robot/src/: .gitignore  config.py  face  main.py  schemes.py  test.py  utils.py
Robot/src/UI/Ticket/: Ticket.py  Ticket.qrc  Ticket.ui  Ticket_rc.py  Ticket_ui.py
Robot/src/auth/: keys_utility.py  main.py  schemes.py  service.py
Robot/src/deviant/: service.py
Robot/src/fms/: fms.py  state.py
Robot/src/fsm/: context.py  fsm.py  state.py
Robot/src/hardware/: robot.py
Robot/src/hardware/low/: port.py
Robot/src/hardware/map/: map.py
Robot/src/info_service/: schemes.py  service.py
Robot/src/states/: auth_state.py  catalog_state.py  destination_info_state.py  store_category_selection_state.py  store_item_state.py  ticket_checking_result_state.py  ticket_cheking_state.py  user_menu_state.py
Robot/src/store/: schemes.py  service.py
Robot/src/test/: test_recommendations.py  test_stores.py
Robot/src/tickets/: exceptions.py  schemes.py  service.py
Robot/src/ui/: basic_window.py
Robot/src/ui/auth/: auth.py  auth_rc.py  auth_ui.py
Robot/src/ui/store/catalog/: catalog.py  catalog_rc.py  catalog_ui.py  item.py  item_ui.py
Robot/src/ui/store/category_selection/: category_select_rc.py  category_select_ui.py  window.py
Robot/src/ui/store/item/: item_rc.py  item_ui.py  window.py
Robot/src/ui/ticket/checking/: result_f_rc.py  result_s_rc.py  window.py  (+7 more)
Robot/src/ui/user/: main_menu_ui.py  user_menu.py
Robot/src/users/: service.py
Robot/src/video/: camera.py
Server/: .gitignore  Dockerfile  pyproject.toml
Server/app/: config.py  db.py  loggers.py  main.py  schemes.py
Server/app/admin/: routers.py  schemes.py
Server/app/alembic/: env.py
Server/app/alembic/versions/: 2a35c866d40d_add_code_to_tickets.py  3225d52c5558_add_password_to_user.py  323d3a2ab067_add_user_profile_data.py  69ef8220180a_add_train_stores.py  6d5696cd6d86_add_destination_to_ticket.py  77dfd111ef8c_add_train_date_to_train_stores_table.py  858177433f79_add_ticket_used_field.py  8cb901049479_add_auth_cards.py  bb27688d1da1_create_base_model.py  bf510344b4f5_add_keycloak_users_table.py  c30599f5d501_add_destinations_info.py  f6815aa45b7a_add_start_date_for_ticket.py
Server/app/auth/: client_type.py  dependecies.py  engineer_privileges.py  routers.py  schemes.py  service.py
Server/app/face_api/: service.py
Server/app/faces/: routers.py  schemes.py
Server/app/frontend/: dependecies.py  router.py  routers.py  schemes.py  service.py
Server/app/keycloak/: router.py  schemes.py  service.py
Server/app/model/: active_store.py  auth_cards.py  destinations_info.py  engineer.py  keycloak_users.py  robot.py  ticket.py  train_stores.py  user.py
Server/app/redis_async/: __init__.py  redis.py
Server/app/robot/: exceptions.py  routers.py  schemes.py  service.py
Server/app/store_api/: schemes.py  service.py
Server/app/users/: schemes.py  service.py
StoresServer/: .gitignore  pyproject.toml
StoresServer/app/: auth.py  config.py  db.py  main.py  schemes.py
StoresServer/app/admin/: routers.py  service.py
StoresServer/app/alembic/: env.py
StoresServer/app/alembic/versions/: a391bd65289a_create_base_model.py
StoresServer/app/model/: history.py  item.py  store.py  task.py
StoresServer/app/robot/: routers.py  schemes.py  service.py
StoresServer/app/store/: routers.py  schemes.py  service.py  store_types.py
(+33 files in other folders)
