[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["NikshetSteh <88205797+NikshetSteh@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
aiohttp = "^3.11.11"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
