[tool.poetry]
name = "robot"
version = "0.1.0"
description = ""
authors = ["NikshetSteh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
cryptography = "^42.0.8"
pydantic-settings = "^2.3.4"
aiohttp = "^3.9.5"
pyside6 = "^6.7.2"
qasync = "^0.27.1"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
