[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["NikshetSteh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
bcrypt = "^4.1.3"
pydantic-settings = "^2.3.4"
fastapi-pagination = "^0.12.26"
chromadb = "^0.5.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
redis = "^5.0.7"
cryptography = "^43.0.0"
aiohttp = "^3.9.5"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
