[tool.poetry]
name = "storesserver"
version = "0.1.0"
description = ""
authors = ["NikshetSteh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
fastapi-pagination = "^0.12.26"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
redis = "^5.0.7"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
uvicorn = "^0.30.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
